se agrego header y footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+
+  <footer>
+    <div class="container-fluid footer1 pb-4">
+        <h6 class="titulof ">Redes Sociales</h6>
+        <div class="container-fluid iconos">
+          <img  class="faceicon "  src="/assets/icons/logoface.png">
+          <img  class="instaicon" src="/assets/icons/logoinsta.png">
+        </div>
+        
+     </div>
+     <div class="container-fluid footer2">
+         <h6 class="centrofooter pt-4">Centro de Estudiantes de Ingeniería en Metalurgia de la Universidad de santiago de Chile</h6>
+     </div>
+</footer>
+
