--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,52 +1,42 @@
 .footer1 {
-    text-align: center;
-    height: 120px;
-    background-color:#000000;
-    padding-top: 20px;
-    
-  
-    
-  }
-  
-  .titulof{
-    
-    margin: 0px auto;
-    color: aliceblue;
-  
-  }
-  
-  .faceicon{
-    width: 50px;
-    height: 50px;
-    
-  }
-  .instaicon{
-    width: 58px;
-    height: 58px;
-    margin-top: 8px;
-    margin-left: 20px;
-   
-   
-  }
+  text-align: center;
+  height: 120px;
+  background-color:#000000;
+  padding-top: 20px;
+}
+
+.titulof {
+  margin: 0px auto;
+  color: aliceblue;
+}
+
+.faceicon {
+  width: 50px;
+  height: 50px;
+
+}
+.instaicon {
+  width: 58px;
+  height: 58px;
+  margin-top: 8px;
+  margin-left: 20px;
+}
+
+.footer2 {
+  background-color: var(--footer2);
+  height: 65px;
+  color: azure;
+  text-align: center;
+}
+
+.centrofooter {
+  margin: 0px auto;
+}
+
+
+@media (max-width:767px) {
   .footer2{
-    background-color: rgb(16, 85, 212);
-    height: 65px;
-    color: azure;
-    text-align: center;
-    
+    height: 100px;
   }
-  .centrofooter{
-    
-    margin: 0px auto;
-  }
-  
-  
-  @media (max-width:767px) {
-    
-    .footer2{
-      height: 100px;
-  
-    }
-  }
-  
-  
+}
+
