--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid footer1 pb-4">
     <h6 class="titulof ">Redes Sociales</h6>
     <div class="container-fluid iconos">
-      <img  class="faceicon "  src="/assets/icons/logoface.png">
-      <img  class="instaicon" src="/assets/icons/logoinsta.png">
+      <a href="" target="_blank"><img class="faceicon"  src="/assets/icons/logoface.png"></a>
+      <a href="https://www.instagram.com/cemetusach/" target="_blank"><img class="instaicon" src="/assets/icons/logoinsta.png"></a>
     </div>
   </div>
 
   <div class="container-fluid footer2">
-      <h6 class="centrofooter pt-4">Centro de Estudiantes de Ingeniería en Metalurgia de la Universidad de santiago de Chile</h6>
+      <h6 class="centrofooter pt-4">Centro de Estudiantes de Ingeniería en Metalurgia de la Universidad de Santiago de Chile</h6>
   </div>
 </footer>
