--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
         <li class="nav-item">
-          <a class="nav-link active ms-4" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active ms-4" href="#">Noticias</a>
