--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,35 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img class="logopng ms-4" src="/assets/images/logopng.png"></a>
-    <div class="container ms-5 infocemet">
-      <h6 class="">CEMET USACH</h6>
-      <P class="ceim">Centro de Estudiantes de Ingeniería en <br>
-        Metalurgia de la Universidad de Santiago de Chile</P>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img class="logopng ms-4" src="/assets/images/logopng.png" ></a>
+      <div class="container ms-5 infocemet">
+        <h6 class="titulocemet">CEMET USACH</h6>
+        <P class="ceim">Centro de Estudiantes de Ingeniería en 
+          Metalurgia<br> de la Universidad de Santiago de Chile</P>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
+          <li class="nav-item">
+            <a class="nav-link active ms-4" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active ms-4" href="#">Noticias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active ms-4" href="#">Directiva</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active ms-4" href="#">Calendario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active ms-4  me-4" href="#">Contacto</a>
+          </li>
+        </ul>
+        
+      </div>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
-        <li class="nav-item">
-          <a class="nav-link active ms-4" aria-current="page" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Noticias</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Directiva</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Calendario</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4  me-4" href="#">Contacto</a>
-        </li>
-      </ul>
 
-    </div>
-  </div>
+  
 </nav>
