--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Noticias</a>
+          <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active ms-4" href="#">Directiva</a>
