--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img class="logopng ms-4" src="/assets/images/logopng.png" ></a>
+      <a class="navbar-brand" routerLink="/home" routerLinkActive="active">
+        <img class="logopng ms-4" src="/assets/images/logopng.png">
+      </a>
       <div class="container ms-5 infocemet">
         <h6 class="titulocemet">CEMET USACH</h6>
         <P class="ceim">Centro de Estudiantes de Ingeniería en
@@ -11,14 +13,13 @@
       </button>
 
 
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" href="#">Noticias</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active ms-4" href="#">Directiva</a>
@@ -33,25 +34,5 @@
 
       </div>
     </div>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
-        <li class="nav-item">
-          <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Directiva</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4" href="#">Calendario</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active ms-4  me-4" href="#">Contacto</a>
-        </li>
-      </ul>
-
 
 </nav>
