created home navbar and fixed some bugs

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,43 @@
-<p>home works!</p>
+
+    <div class="container-fluid row justify-content-sm-center containernav ">
+            <div class="col-sm conitem ">
+                <H3 class="nombreseccion">Nube Papeo</H3>
+                <img class="img-fluid fotopng" src="/assets/icons/cloud.png">
+                
+            </div>
+            <div class="col-sm-auto hr2">
+                
+            </div>
+            <div class=" col-sm  conitem ">
+                <H3 class="nombreseccion">Ramos </H3>
+                <img class="img-fluid fotopng" src="/assets/icons/file.png"> 
+            </div>
+            
+            <div class="col-sm-auto hr2">
+                
+            </div>
+            <div class=" col-sm  conitem ">
+                 <H3 class="nombreseccion">Malla </H3> 
+                <img class="img-fluid fotopng" src="/assets/icons/folder.png"> 
+            </div>
+            <div class="col-sm-auto hr2">
+                
+            </div>
+            <div class=" col-sm  conitem ">
+                <H3 class="nombreseccion">Sugerencias </H3>
+                <img class="img-fluid fotopng" src="/assets/icons/file.png"> 
+            </div>
+            <div class="col-sm-auto hr2">
+                
+            </div>
+            <div class=" col-sm conitem ">
+                <H3 class="nombreseccion">Denuncias </H3>
+                <img class="img-fluid fotopng" src="/assets/icons/complain.png"> 
+            </div>
+           
+        
+        
+    </div>
+    
+    
+
