--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,43 +1,40 @@
+<div class="container-fluid row justify-content-sm-center containernav">
+  <div class="col-sm conitem ">
+    <h3 class="nombreseccion">Nube Papeo</h3>
+    <img class="img-fluid fotopng" src="/assets/icons/cloud.png">
+  </div>
 
-    <div class="container-fluid row justify-content-sm-center containernav ">
-            <div class="col-sm conitem ">
-                <H3 class="nombreseccion">Nube Papeo</H3>
-                <img class="img-fluid fotopng" src="/assets/icons/cloud.png">
-                
-            </div>
-            <div class="col-sm-auto hr2">
-                
-            </div>
-            <div class=" col-sm  conitem ">
-                <H3 class="nombreseccion">Ramos </H3>
-                <img class="img-fluid fotopng" src="/assets/icons/file.png"> 
-            </div>
-            
-            <div class="col-sm-auto hr2">
-                
-            </div>
-            <div class=" col-sm  conitem ">
-                 <H3 class="nombreseccion">Malla </H3> 
-                <img class="img-fluid fotopng" src="/assets/icons/folder.png"> 
-            </div>
-            <div class="col-sm-auto hr2">
-                
-            </div>
-            <div class=" col-sm  conitem ">
-                <H3 class="nombreseccion">Sugerencias </H3>
-                <img class="img-fluid fotopng" src="/assets/icons/file.png"> 
-            </div>
-            <div class="col-sm-auto hr2">
-                
-            </div>
-            <div class=" col-sm conitem ">
-                <H3 class="nombreseccion">Denuncias </H3>
-                <img class="img-fluid fotopng" src="/assets/icons/complain.png"> 
-            </div>
-           
-        
-        
-    </div>
-    
-    
+  <div class="col-sm-auto hr2" style="background-color: aqua; width: 10px;"></div>
 
+  <div class=" col-sm  conitem ">
+    <h3 class="nombreseccion">Ramos </h3>
+    <img class="img-fluid fotopng" src="/assets/icons/file.png">
+  </div>
+
+  <div class="col-sm-auto hr2"></div>
+
+  <div class=" col-sm  conitem ">
+    <h3 class="nombreseccion">Malla </h3>
+    <img class="img-fluid fotopng" src="/assets/icons/folder.png">
+  </div>
+
+  <div class="col-sm-auto hr2"></div>
+
+  <div class=" col-sm  conitem ">
+    <h3 class="nombreseccion">Sugerencias </h3>
+    <img class="img-fluid fotopng" src="/assets/icons/file.png">
+  </div>
+
+  <div class="col-sm-auto hr2"></div>
+
+  <div class=" col-sm conitem ">
+    <h3 class="nombreseccion">Denuncias </h3>
+    <img class="img-fluid fotopng" src="/assets/icons/complain.png">
+  </div>
+</div>
+
+<div class="product-grid">
+  <app-news
+    *ngFor="let new of news" [new]="new">
+  </app-news>
+</div>
