--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -1,59 +1,54 @@
-//panel de navegacion 
+//panel de navegacion
 
 .containernav{
-    width: 85%;
-    
-    margin-left:auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    
-    border:solid 0.5px rgb(219, 219, 219);
-    border-radius:20px;
-    padding-left:35px;
-    
-}
-.conitem{
-    margin-bottom: 25px;
-    margin-top: 25px;
-   
+  width: 85%;
+  margin-left:auto;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 
-   
-   
+  border:solid 0.5px rgb(219, 219, 219);
+  border-radius:20px;
+  padding-left:35px;
+
+  display: flex;
+  align-items: center;
+
 }
+
+.conitem{
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+
 .nombreseccion{
-    color: rgb(117, 117, 117);
-    margin-top:15px;
+  color: rgb(116, 65, 65);
+  margin-top:15px;
 }
+
 .fotopng{
-    width: 80px;
-    display:block;
-    margin:auto;
-    
-    transition:  all 400ms ease;
+  width: 80px;
+  display:block;
+  margin:auto;
+
+  transition:  all 400ms ease;
 }
 .fotopng:hover{
-   
-    
-    transform: translateY(-5%)
+  transform: translateY(-5%)
 }
-.nombreseccion{
-    
-    text-align: center;
-}
-.hr2{
-    border-left:1px solid rgb(189, 188, 188);
-    height:80px;
-    
-    margin-top:35px;
-    
-    margin-right: auto 0px;
-    padding-right:  0px;
-    padding-left: 0px;
 
-   
-    
-   
+.nombreseccion{
+  text-align: center;
+}
+
+.hr2{
+  border-left:1px solid rgb(189, 188, 188);
+  height:80px;
+
+  margin-top:35px;
+  margin-right: auto 0px;
+  padding-right:  0px;
+  padding-left: 0px;
 }
 
 @media (max-width:980px){
@@ -73,7 +68,7 @@
     .hr2{
         height: 50px;
     }
-   
+
 }
 @media (max-width:625px){
     .fotopng{
@@ -89,36 +84,39 @@
         margin: auto 0px;
         margin-bottom: 20px;
     }
+
     .hr2{
         height: 30px;
-    }
+  }
 }
 
 @media (max-width:575px) {
-    .nombreseccion{
-        font-size: 20px;
-    }
-   .hr2{
+  .containernav{
+    width: 65%;
+  }
+
+  .nombreseccion {
+    font-size: 20px;
+  }
+
+  .hr2 {
     border-left:0px ;
     height:0px;
     margin: auto;
     border-bottom:1px solid rgb(219, 219, 219);
     width: 100px;
     padding-bottom: 25px;
-    
-   }
-    .containernav{
-       width: 65%;
-      }
-   .conitem{
-       
-       margin-left: 0px;
-      
-   } 
-    .fotopng{
-        width: 100px;
-    }
-   .denuncia{
-       margin-bottom: 25px;
-   }
   }
+
+  .conitem{
+    margin-left: 0px;
+  }
+
+  .fotopng{
+    width: 100px;
+  }
+
+  .denuncia{
+    margin-bottom: 25px;
+  }
+}
