--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -18,7 +18,7 @@
           <li class="nav-item">
             <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
           </li>
-          <li ckflass="nav-item">
+          <li class="nav-item">
             <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
           </li>
           <li class="nav-item">
