--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -22,7 +22,7 @@
 }
 
 .nombreseccion{
-  color: rgb(116, 65, 65);
+  color: rgb(95, 95, 95);
   margin-top:15px;
 }
 
@@ -42,14 +42,47 @@
 }
 
 .hr2{
-  border-left:1px solid rgb(189, 188, 188);
-  height:80px;
+    border-left:1px solid rgb(189, 188, 188);
+    height:80px;
+    
+    margin-top:35px;
+    
+    margin-right: auto 0px;
+    padding-right:  0px;
+    padding-left: 0px;
 
-  margin-top:35px;
-  margin-right: auto 0px;
-  padding-right:  0px;
-  padding-left: 0px;
+   
+    
+   
+} 
+/*Noticias home*/
+.divultimas{
+    background-color: rgb(245, 245, 245);
+    border-radius: 10px;
+    border:solid 0.5px rgb(165, 165, 165);
+    height: 50px;
+    margin-bottom: 50px;
+  
 }
+.ultimasnoticias{
+    margin-top: 6px;
+    text-align: center;
+}
+.noticiashome{
+    
+}
+.container-cards{
+ 
+  display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: auto;
+    grid-gap: 5rem;
+    padding: 1rem;
+   
+    grid-auto-flow: dense;
+}
+
+
 
 @media (max-width:980px){
     .fotopng{
@@ -89,6 +122,7 @@
         height: 30px;
   }
 }
+
 
 @media (max-width:575px) {
   .containernav{
