--- a/src/app/home/components/news/news.component.scss
+++ b/src/app/home/components/news/news.component.scss
@@ -9,3 +9,24 @@
     object-position: center;
   }
 }
+.cardnoticias{
+  border: none;
+  box-shadow:  0px 1px  10px rgba(0, 0, 0, 0.15);
+  transition:  all 400ms ease;
+}
+.cardnoticias:hover{
+  box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.5%);
+  
+}
+.card-body{
+  background-color: rgb(248, 248, 248);
+
+}
+.card-text{
+  
+  transition:  all 200ms ease;
+}
+.card-text:hover{
+  color: rgb(92, 92, 92);
+}
