--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
 :root {
   //fonts
   //normalFont:font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -12,4 +12,4 @@
 }
 
 html, body { height: 100%; }
-body { margin: 0;  }
+body { margin: 0; font-family: 'Josefin Sans', sans-serif;}
