some changes made

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="col-sm-auto hr2"></div>
 
     <div class=" col-sm  conitem ">
-      <h3 class="nombreseccion">Ramos </h3>
+      <h3 class="nombreseccion">Sube tu Papeo </h3>
       <img class="img-fluid fotopng" src="/assets/icons/file.png">
     </div>
 
@@ -17,20 +17,20 @@
 
     <div class=" col-sm  conitem ">
       <h3 class="nombreseccion">Malla </h3>
-      <img class="img-fluid fotopng" src="/assets/icons/folder.png">
+      <img class="img-fluid fotopng" src="/assets/icons/folder2.png">
     </div>
 
     <div class="col-sm-auto hr2"></div>
 
     <div class=" col-sm  conitem ">
-      <h3 class="nombreseccion">Sugerencias </h3>
-      <img class="img-fluid fotopng" src="/assets/icons/file.png">
+      <h3 class="nombreseccion">Documentos </h3>
+      <img class="img-fluid fotopng" src="/assets/icons/documents3.png">
     </div>
 
     <div class="col-sm-auto hr2"></div>
 
     <div class=" col-sm conitem ">
-      <h3 class="nombreseccion">Denuncias </h3>
+      <h3 class="nombreseccion">Reclamos </h3>
       <img class="img-fluid fotopng" src="/assets/icons/complain.png">
     </div>
   </div>
@@ -43,5 +43,9 @@
     <app-news
         *ngFor="let new of news" [new]="new">
     </app-news>
+  </div>
+
+  <div class="container masNoticias ">
+    <h3 class="masNoticiasT">Más Noticias ></h3>
   </div>
 </div>
