--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -68,9 +68,7 @@
     margin-top: 6px;
     text-align: center;
 }
-.noticiashome{
 
-}
 
 .container-cards{
   display: grid;
@@ -83,7 +81,24 @@
 }
 
 
-
+/*boton mas noticias*/
+.masNoticias{ 
+  padding-top: 12px;
+  background-color: rgb(230, 230, 230);
+  
+  width: 250px;
+  height: 50px;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 25px;
+  transition:  all 400ms ease;
+}
+.masNoticias:hover{
+ background-color: rgb(202, 202, 202);
+}
+.masNoticiasT{
+ margin: auto 0px
+}
 @media (max-width:980px){
     .fotopng{
         width: 50px;
