--- a/src/app/news/components/news/news.component.html
+++ b/src/app/news/components/news/news.component.html
@@ -1,1 +1,6 @@
-<p>news works!</p>
+<div class="container-fluid">
+    <div class="container-fluid noticiasHead">
+        <h3>Hola como andas</h3>
+    </div>
+  
+</div>
