--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,10 @@
 <footer>
   <div class="container-fluid footer1 pb-4">
-    <h6 class="titulof ">Redes Sociales</h6>
+    <h5 class="titulof">Redes Sociales</h5>
     <div class="container-fluid iconos">
       <a href="" target="_blank"><img class="faceicon"  src="/assets/icons/logoface.png"></a>
       <a href="https://www.instagram.com/cemetusach/" target="_blank"><img class="instaicon" src="/assets/icons/logoinsta.png"></a>
+      <a href="#"><img class="linkedinIcon" src="/assets/icons/logolinkedin.png"></a>
     </div>
   </div>
 
