--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -16,10 +16,16 @@
 
 }
 .instaicon {
-  width: 58px;
-  height: 58px;
+  width: 55px;
+  height: 55px;
   margin-top: 8px;
-  margin-left: 20px;
+  margin-left: 8px;
+}
+.linkedinIcon{
+  width: 55px;
+  height: 55px;
+  margin-top: 8px;
+  margin-left: 0px;
 }
 
 .footer2 {
