--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,12 @@
 <footer>
-  <div class="container-fluid footer1 pb-4">
-    <h5 class="titulof">Redes Sociales</h5>
-    <div class="container-fluid iconos">
-      <a href="" target="_blank"><img class="faceicon"  src="/assets/icons/logoface.png"></a>
-      <a href="https://www.instagram.com/cemetusach/" target="_blank"><img class="instaicon" src="/assets/icons/logoinsta.png"></a>
-      <a href="#"><img class="linkedinIcon" src="/assets/icons/logolinkedin.png"></a>
+  <div class="container-fluid footer1">
+    <div class="text-icons">
+      <h5 class="titulof">Redes Sociales</h5>
+      <div class="container-fluid icons">
+        <a href="https://twitter.com/cemetusach?lang=es" target="_blank" class="icon-twitter"><img class="icon-twitter"  src="/assets/icons/logo-twitter.png" alt="Logo Twitter"></a>
+        <a href="https://www.instagram.com/cemetusach/" target="_blank"><img class="instaicon" src="/assets/icons/logoinsta.png" alt="Logo Instagram"></a>
+        <a href="https://www.linkedin.com/in/centro-estudiantes-de-metalurgia"><img class="linkedinIcon" src="/assets/icons/logo-linkedin.png" alt="Logo LinkedIn"></a>
+      </div>
     </div>
   </div>
 
