--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
   //fonts
   //normalFont:font-family: Roboto, "Helvetica Neue", sans-serif;
   --normalSize: 16px;
+  --h3: 1.75rem;
 
   // colors
   --maincolor: black;
