--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -1,7 +1,9 @@
-//panel de navegacion
+// panel de navegación
 
 .containernav{
-  width: 85%;
+  display: flex;
+  align-items: center;
+  // width: 85%;
   margin-left:auto;
   margin-right: auto;
   margin-top: 50px;
@@ -11,19 +13,18 @@
   border-radius:20px;
   padding-left:35px;
 
-  display: flex;
-  align-items: center;
-
 }
 
 .conitem{
-  margin-bottom: 25px;
-  margin-top: 25px;
+  text-decoration: none;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .nombreseccion{
   color: rgb(95, 95, 95);
-  margin-top:15px;
+  font-size: var(--h3);
+  margin-bottom: 0;
 }
 
 .fotopng{
@@ -41,83 +42,103 @@
   text-align: center;
 }
 
-.hr2{
-    border-left:1px solid rgb(189, 188, 188);
-    height:80px;
-
-    margin-top:35px;
-
-    margin-right: auto 0px;
-    padding-right:  0px;
-    padding-left: 0px;
-
-
-
-
+.hr2 {
+  border-left:1px solid rgb(189, 188, 188);
+  height:80px;
+  // margin-top:35px;
+  margin-right: auto 0px;
+  padding-right:  0px;
+  padding-left: 0px;
 }
+
 /*Noticias home*/
 .divultimas{
   background-color: rgb(245, 245, 245);
   border-radius: 10px;
-  border:solid 0.5px rgb(165, 165, 165);
+  border: solid 0.5px rgb(165, 165, 165);
   height: 50px;
   margin-bottom: 50px;
 }
 
 .ultimasnoticias{
-    margin-top: 6px;
-    text-align: center;
+  margin-top: 6px;
+  text-align: center;
+  font-size: var(--h3);
 }
 
+// .noticiasome{
+
+// }
 
 .container-cards{
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   grid-template-rows: auto;
-  grid-gap: 5rem;
-  padding: 1rem;
+  gap: 5rem;
+  padding-bottom: 3rem;
 
-  grid-auto-flow: dense;
+  // grid-auto-flow: dense;
 }
 
 
 /*boton mas noticias*/
-.masNoticias{ 
-  padding-top: 12px;
+.container__mas-noticias {
+  display: flex;
+  justify-content: center;
+}
+
+.btn__mas-noticias{
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+
   background-color: rgb(230, 230, 230);
-  
-  width: 250px;
-  height: 50px;
+  border: none;
   border-radius: 10px;
-  text-align: center;
-  margin-bottom: 25px;
+  font-size: var(--h3);
+  text-decoration: none;
   transition:  all 400ms ease;
+
+  height: 50px;
+  width: 250px;
 }
-.masNoticias:hover{
- background-color: rgb(202, 202, 202);
+.btn__mas-noticias:hover{
+  background-color: rgb(202, 202, 202);
 }
-.masNoticiasT{
- margin: auto 0px
+
+.text__mas-noticias {
+  padding-top: 5px;
 }
+
+.icon__mas-noticias {
+  margin-top: 5px;
+  height: 25px;
+  width: 25px;
+}
+
 @media (max-width:980px){
     .fotopng{
         width: 50px;
     }
+
     .nombreseccion{
        font-size: 15px;
     }
+
     .containernav{
         width: 75%;
     }
+
     .conitem{
         margin: auto 0px;
         margin-bottom: 20px;
     }
+
     .hr2{
         height: 50px;
     }
-
 }
+
 @media (max-width:625px){
   .fotopng{
     width: 40px;
@@ -143,6 +164,10 @@
 
 
 @media (max-width:575px) {
+  // .product-grid{
+  //   grid-template-columns: repeat(1, 1fr);
+  // }
+
   .containernav{
     width: 65%;
   }
