--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
 
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0  navbitem">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbitem">
           <li class="nav-item">
             <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
           </li>
@@ -22,13 +22,13 @@
             <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" href="#">Directiva</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Directiva</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" href="#">Calendario</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4  me-4" href="#">Contacto</a>
+            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/home" routerLinkActive="active">Contacto</a>
           </li>
         </ul>
 
