advance in news page

--- a/src/app/news/components/news-page/news-page.component.html
+++ b/src/app/news/components/news-page/news-page.component.html
@@ -1,12 +1,13 @@
+<div class="container-fluid noticiasHead">
+    <div class="container-fluid">
+        <h1 class="h1Head">Noticias USACH</h1>
+    </div>
+</div>
+
 <div class="container container-cards">
   <app-news
       *ngFor="let new of news" [new]="new">
   </app-news>
 </div>
 
-<!-- <div class="container-fluid">
-    <div class="container-fluid noticiasHead">
-        <h3>Hola como andas</h3>
-    </div>
 
-</div> -->
