--- a/src/app/news/components/news/news.component.html
+++ b/src/app/news/components/news/news.component.html
@@ -1,8 +1,17 @@
-<div class="card cardnoticias">
-  <img src="/assets/images/noticia.png" class="card-img-top" alt="...">
-  <div class="card-body ">
 
-    <p class="card-text">El mundo de la innovacion y el emprendimiento cada vez es mas conocido y admirado te invitamos </p>
-    <button type="button" class="btn btn-outline-success">Ver más</button>
+
+<div class="container-fluid noticia">
+  <div class="container-fluid row">
+      <div class="container-fluid containerNoticia">
+          <p class="fechaNoticia">14 de enero 2021</p>
+          <img class="img-fluid imgNoticia" src="/assets/images/noticia.png">
+      </div>  
+      <div class="container-fluid infoNoticia">
+          <h5 >Lista de estudiantes sin codigo</h5>
+          <p class="contenidoNoticia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, ratione? Ab, enim expedita! Quaerat quisquam, amet quidem odit quo dolorem saepe soluta at molestiae voluptas, eligendi cupiditate commodi aperiam est explicabo veritatis ut assumenda? </p>
+      
+      </div>  
+      <hr class="hrNoticia">
   </div>
+  
 </div>
