--- a/src/app/news/components/news-page/news-page.component.scss
+++ b/src/app/news/components/news-page/news-page.component.scss
@@ -1,3 +1,18 @@
+
 .noticiasHead{
-    background-color: black;
+    background-color: rgb(245, 245, 245);
+    height:100px;
+    padding-top: 30px;
+    border-top:solid 0.1px rgb(226, 226, 226);
+    border-bottom:solid 0.1px rgb(226, 226, 226);
+
+    
+}
+.h1Head{
+    margin-left: 50px;
+   
+}
+@media (max-width:980px){
+    .noticiasHead{height: 80px;}
+    .h1Head{margin-left: 0px;}
 }
