some changes made in news

--- a/src/app/news/components/news-page/news-page.component.html
+++ b/src/app/news/components/news-page/news-page.component.html
@@ -10,4 +10,10 @@
   </app-news>
 </div>
 
-
+<div class="container-fluid contenedorButton d-flex">
+    <button class="container-fluid buttonAnterior">
+        <img class="img-buttonAnterior" src="/assets/icons/left-arrow.png" alt="Icono Flecha">
+        Anterior
+      
+    </button>
+</div>
