--- a/src/app/news/components/news-page/news-page.component.scss
+++ b/src/app/news/components/news-page/news-page.component.scss
@@ -12,7 +12,34 @@
     margin-left: 50px;
    
 }
+.contenedorButton{
+    margin-left: 180px;
+    width: 200px;
+    height: 50px;
+}
+.buttonAnterior{
+    margin-top: 20px;
+  
+    width: 135px;
+    height: 50px;
+    border:solid 0.5px rgb(223, 223, 223);
+    border-radius: 8px;
+    transition:  all 400ms ease; 
+    background-color: white;
+    
+}
+.buttonAnterior:hover{
+    background-color: rgb(224, 224, 224);
+}
+.img-buttonAnterior{
+    width: 35px;
+   
+   
+}
 @media (max-width:980px){
     .noticiasHead{height: 80px;}
     .h1Head{margin-left: 0px;}
+}
+@media (max-width:767px){
+    .contenedorButton{margin-left: 0px;}
 }
