add component and module admin and fix guard

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+<form [formGroup]="form" (ngSubmit)="login($event)">
+  <input formControlName="email" matInput type="email">
+  <input formControlName="password" matInput type="password">
+  <button [disabled]="form.invalid" mat-raised-button color="primary" type="submit" [style.marginLeft.px] = 30>Ingresar</button>
+</form>
