--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="container__mas-noticias">
-    <button class="btn__mas-noticias">
+    <button class="btn__mas-noticias" routerLink="/noticias" routerLinkActive="active">
       <div class="text__mas-noticias">Más Noticias</div>
       <div><img class="icon__mas-noticias" src="/assets/icons/right-arrow.png" alt="Icono Flecha"></div>
     </button>
