--- a/src/app/home/components/news-card/news-card.component.html
+++ b/src/app/home/components/news-card/news-card.component.html
@@ -1,8 +1,8 @@
 <div class="card cardnoticias">
-  <img src="/assets/images/noticia.png" class="card-img-top" alt="...">
+  <img [src]="new.image" [alt]="new.title" class="card-img-top" >
   <div class="card-body ">
 
-    <p class="card-text">El mundo de la innovacion y el emprendimiento cada vez es mas conocido y admirado te invitamos </p>
+    <p class="card-text">{{ new.description | slice:0:100 }}</p>
     <button type="button" class="btn btn-outline-success">Ver más</button>
   </div>
 </div>
