--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   //normalFont:font-family: Roboto, "Helvetica Neue", sans-serif;
   --normalSize: 16px;
   --h3: 1.75rem;
+  --h5: 1.25rem;
 
   // colors
   --maincolor: black;
