add management component, added directive page and forms page routes to routing

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -29,7 +29,7 @@
 
     <div class="col-sm-auto hr2"></div>
 
-    <a routerLink="/home" routerLinkActive="active" class="col-sm conitem ">
+    <a routerLink="/forms/reclamos" routerLinkActive="active" class="col-sm conitem ">
       <p class="nombreseccion">Reclamos</p>
       <img class="img-fluid fotopng" src="/assets/icons/complain.png" alt="Icono de Reclamos">
     </a>
