--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -22,13 +22,13 @@
             <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Directiva</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="active">Directiva</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/home" routerLinkActive="active">Contacto</a>
+            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/forms/contacto" routerLinkActive="active">Contacto</a>
           </li>
         </ul>
 
