some change in complaints

--- a/src/app/forms/components/complaints/complaints.component.html
+++ b/src/app/forms/components/complaints/complaints.component.html
@@ -1,1 +1,7 @@
-<p>complaints works!</p>
+<div class="container-fluid noticiasHead">
+    <div class="container-fluid">
+        <h1 class="h1Head">Reclamos</h1>
+    </div>
+</div>
+Aqui podrás hacer tus reclamos hacia la Institución ya sean malas practicas o  comportamientos iregulares o mal intencionados
+ de profesores , ayudantes y compañeros
