--- a/src/app/management/components/management/management.component.html
+++ b/src/app/management/components/management/management.component.html
@@ -1,1 +1,5 @@
-<p>management works!</p>
+<div class="container-fluid managementHead">
+    <div class="container-fluid">
+        <h1 class="h1Head">Directiva</h1>
+    </div>
+</div>
