--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/home" routerLinkActive="active">
-        <img class="logopng ms-4" src="/assets/images/logopng.png">
+      <a class="navbar-brand" routerLink="/home">
+        <img class="logo ms-3" src="/assets/images/logopng.png">
       </a>
-      <div class="container ms-5 infocemet">
-        <h6 class="titulocemet">CEMET USACH</h6>
-        <P class="ceim">Centro de Estudiantes de Ingeniería en
-          Metalurgia<br> de la Universidad de Santiago de Chile</P>
+      <div class="container ms-5 container__text-cemet">
+        <h6 class="titulo-cemet">CEMET USACH</h6>
+        <p class="info-cemet">Centro de Estudiantes de Ingeniería en
+          Metalurgia<br> de la Universidad de Santiago de Chile</p>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,19 +16,20 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbitem">
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Inicio</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="is-active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="active">Noticias</a>
+            <a *ngIf="!user" class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="is-active">Noticias</a>
+            <a *ngIf="user" class="nav-link active ms-4" aria-current="page" routerLink="/admin" routerLinkActive="is-active">Noticias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="active">Directiva</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="is-active">Directiva</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="active">Calendario</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="is-active">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/forms/contacto" routerLinkActive="active">Contacto</a>
+            <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/forms/contacto" routerLinkActive="is-active">Contacto</a>
           </li>
         </ul>
 
