--- a/src/app/admin/components/admin/admin.component.html
+++ b/src/app/admin/components/admin/admin.component.html
@@ -1,2 +1,19 @@
-<p>admin works!</p>
-<button class="btn__logout" (click)="logout()">Logout</button>
+<button class="btn btn-primary" (click)="logout()">Logout</button>
+<div id="quill" class="container">
+  <p>Content *</p>
+</div>
+
+<form [formGroup]="form" class="container form-group" (ngSubmit)="test(form.value)">
+  <input type="text" formControlName="name" class="form-control" placeholder="Nombre y apellido">
+  <input type="email" formControlName="email" class="form-control" placeholder="Email">
+  <quill-editor [styles]="editorStyle" placeholder="Texto" formControlName="message"></quill-editor>
+  <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+</form>
+
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<div id="editor">
+  <p>Hello World!</p>
+  <p>Some initial <strong>bold</strong> text</p>
+  <p><br></p>
+</div>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
