--- a/src/app/forms/components/contact/contact.component.html
+++ b/src/app/forms/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="sendEmail(form.value)">
+<form [formGroup]="form" class="form-group" (ngSubmit)="sendEmail(form.value)">
   <input type="text" formControlName="name" class="form-control" placeholder="Nombre y apellido">
   <input type="email" formControlName="email" class="form-control" placeholder="Email">
   <textarea formControlName="message" class="form-control form-control-lg" placeholder="Mensaje"></textarea>
