--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,28 +1,28 @@
-.logopng{
+.logo{
     height: 80px;
     width: 80px;
     margin-right: -20px;
 }
 
+.container__text-cemet{
+  width: 400px;
+  margin-bottom: auto;
+}
+
+.titulo-cemet{
+  font-size: 12px;
+  margin-top: 15px;
+  margin-bottom: auto;
+}
+
+.info-cemet{
+  margin-top: 10px;
+  font-size: 12px;
+}
+
 .navbitem{
     font-size: 18px;
     position:absolute; right:0px;
-}
-.titulocemet{
-    font-size: 12px;
-    margin-top: 15px;
-    margin-bottom: auto;
-}
-.infocemet{
-
-    width: 400px;
-    margin-bottom: auto;
-
-}
-
-.ceim{
-    margin-top: 10px;
-    font-size: 12px;
 }
 
 .navbar{
@@ -30,24 +30,24 @@
 }
 
 @media (max-width:650px) {
-    .infocemet{
-
-
-       width: 165px;
-
-
-
-
-    }
-    .logopng{margin-right: -65px;}
-    .titulocemet{
-        font-size: 12px;
-
-    }
-    .ceim{
-        font-size: 10px;
-    }
-    .navbitem{
-        position:static
-    }
+  .logo{
+    margin-right: -65px;
+    margin-left: 0;
   }
+
+  .container__text-cemet{
+    width: 165px;
+  }
+
+  .titulo-containercemet{
+    font-size: 12px;
+  }
+
+  .info-cemet{
+    font-size: 10px;
+  }
+
+  .navbitem{
+    position:static
+  }
+}
