--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,8 +19,7 @@
             <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="is-active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a *ngIf="!user" class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="is-active">Noticias</a>
-            <a *ngIf="user" class="nav-link active ms-4" aria-current="page" routerLink="/admin" routerLinkActive="is-active">Noticias</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/noticias" routerLinkActive="is-active">Noticias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="is-active">Directiva</a>
