--- a/src/app/admin/components/admin/admin.component.html
+++ b/src/app/admin/components/admin/admin.component.html
@@ -6,14 +6,15 @@
 <form [formGroup]="form" class="container form-group" (ngSubmit)="test(form.value)">
   <input type="text" formControlName="name" class="form-control" placeholder="Nombre y apellido">
   <input type="email" formControlName="email" class="form-control" placeholder="Email">
-  <quill-editor [styles]="editorStyle" placeholder="Texto" formControlName="message"></quill-editor>
+  <div [(ngmodel)]="content" id="editor" trackChanges="all" placeholder="Texto"></div>
+  <!-- <quill-editor [(ngModel)]="content" trackChanges="all" [modules]="modules" (onEditorCreated)="addBindingCreated($event)"></quill-editor> -->
   <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
 </form>
 
-<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<div id="editor">
-  <p>Hello World!</p>
-  <p>Some initial <strong>bold</strong> text</p>
-  <p><br></p>
-</div>
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<div id="text"></div>
+
+<!-- <div id="editor"></div>
+  <div id="toolbar">
+
+
+</div> -->
