--- a/src/app/news/components/news-page/news-page.component.html
+++ b/src/app/news/components/news-page/news-page.component.html
@@ -4,6 +4,8 @@
     </div>
 </div>
 
+<div></div>
+
 <div class="container container-cards">
   <app-news
       *ngFor="let new of news" [new]="new">
@@ -11,9 +13,8 @@
 </div>
 
 <div class="container-fluid contenedorButton d-flex">
-    <button class="container-fluid buttonAnterior">
+    <button class="container-fluid buttonAnterior" routerLink="/noticias">
         <img class="img-buttonAnterior" src="/assets/icons/left-arrow.png" alt="Icono Flecha">
         Anterior
-      
     </button>
 </div>
