some changes made

--- a/src/app/forms/components/complaints/complaints.component.html
+++ b/src/app/forms/components/complaints/complaints.component.html
@@ -3,5 +3,11 @@
         <h1 class="h1Head">Reclamos</h1>
     </div>
 </div>
-Aqui podrás hacer tus reclamos hacia la Institución ya sean malas practicas o  comportamientos iregulares o mal intencionados
- de profesores , ayudantes y compañeros
+
+<div class="container-fluid">
+    Aqui podrás hacer tus reclamos hacia la Institución ya sean malas practicas o  comportamientos iregulares o mal intencionados
+    de profesores , ayudantes y compañeros
+    <br>
+    El formulario puede ser llenado de forma anónima si quien denuncia no desea dar a conocer su identidad.
+    
+</div>
