--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footerC">
   <div class="container-fluid footer1">
     <div class="text-icons">
       <h5 class="titulof">Redes Sociales</h5>
