--- a/src/app/forms/components/contact/contact.component.html
+++ b/src/app/forms/components/contact/contact.component.html
@@ -1,6 +1,15 @@
-<form [formGroup]="form" class="form-group" (ngSubmit)="sendEmail(form.value)">
-  <input type="text" formControlName="name" class="form-control" placeholder="Nombre y apellido">
-  <input type="email" formControlName="email" class="form-control" placeholder="Email">
-  <textarea formControlName="message" class="form-control form-control-lg" placeholder="Mensaje"></textarea>
-  <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
-</form>
+<div class="container-fluid encabezadoContacto">
+  <h1>Contacto</h1>
+  Si necesitas contactactarte con nosotros puedes hacerlo a través<br> del correo cemet@usach.cl, o rellenando el siguiente formulario
+</div>
+
+<div class="container-fluid cajaForm"> 
+  <form [formGroup]="form" class="form-group container-fluid " (ngSubmit)="sendEmail(form.value)">
+    <input type="text" formControlName="name" class="form-control" placeholder="Nombre y apellido">
+    <input type="email" formControlName="email" class="form-control" placeholder="Email">
+    <textarea formControlName="message" class="form-control form-control-lg" placeholder="Mensaje"></textarea>
+    <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+  </form>
+  
+</div>
+
