--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,5 +1,12 @@
-<form [formGroup]="form" (ngSubmit)="login($event)">
-  <input formControlName="email" matInput type="email">
-  <input formControlName="password" matInput type="password">
-  <button [disabled]="form.invalid" mat-raised-button color="primary" type="submit" [style.marginLeft.px] = 30>Ingresar</button>
-</form>
+
+  <div class="container-fluid cajaForm">
+    <form [formGroup]="form" (ngSubmit)="login($event)" class="formLogin">
+      <input formControlName="email" class="form-control iUser" matInput type="email">
+      <br>
+      <input formControlName="password" class="form-control iPass" matInput type="password">
+      <button [disabled]="form.invalid" mat-raised-button color="primary" class="buttonLogin" type="submit" [style.marginLeft.px] = 30>Login</button>
+    </form>
+  </div>
+ 
+  
+
