--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -25,7 +25,7 @@
             <a class="nav-link active ms-4" aria-current="page" routerLink="/directiva" routerLinkActive="is-active">Directiva</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active ms-4" aria-current="page" routerLink="/home" routerLinkActive="is-active">Calendario</a>
+            <a class="nav-link active ms-4" aria-current="page" routerLink="/calendario" routerLinkActive="is-active">Calendario</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active ms-4  me-4" aria-current="page" routerLink="/forms/contacto" routerLinkActive="is-active">Contacto</a>
