--- a/src/app/malla/components/malla/malla.component.html
+++ b/src/app/malla/components/malla/malla.component.html
@@ -4,6 +4,10 @@
     <button class="btn btn-primary">Malla civil antigua</button>
     <button class="btn btn-primary">Malla ejecucion</button>
   </div>
+  <div class="header-malla">
+    <div class="header-year">Semestre</div>
+    <div class="header-semester">Año</div>
+  </div>
   <ol>
     <li class="ramos" *ngFor="let ramo of nombreRamos; let i=index">{{ ramo }}</li>
   </ol>
