--- a/src/app/calendar/components/calendar/calendar.component.html
+++ b/src/app/calendar/components/calendar/calendar.component.html
@@ -12,8 +12,8 @@
   <ol>
     <li *ngFor="let day of week" class="day-name">{{ day | slice:0:3 }}</li>
 
-    <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
-        *ngFor="let day of monthSelect; let first = first">
+    <li (click)="clickDay(day)" *ngFor="let day of monthSelect; let first = first"
+        [style.gridColumnStart]="first ? day?.indexWeek : 'auto'">
       <span>{{day?.value}}</span>
     </li>
   </ol>
